--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
         <module>key-enum-mybatis</module>
         <module>key-enum-mapstruct</module>
         <module>key-enum-jackson</module>
+        <module>key-enum-fastjson</module>
+        <module>key-enum-fastjson2</module>
     </modules>
 
     <properties>
