--- a/key-enum-validator/pom.xml
+++ b/key-enum-validator/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>key-enum</artifactId>
         <groupId>com.github.lokic</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
